--- a/src/component/chat/ChatOfflineForm.scss
+++ b/src/component/chat/ChatOfflineForm.scss
@@ -40,7 +40,7 @@
 }
 
 .successContainer {
-  font-size: #{13/$font-size}rem;
+  font-size: $font-size-lrg;
   line-height: #{20/$font-size}rem;
   color: $zd-color-oil;
 }
