--- a/src/component/chat/ChatMenu.scss
+++ b/src/component/chat/ChatMenu.scss
@@ -39,7 +39,7 @@
   background: none;
   outline: none;
   color: $zd-color-monsoon;
-  font-size: #{13/$font-size}rem;
+  font-size: $font-size-lrg;
   padding: #{8/$font-size}rem #{15/$font-size}rem;
 
   path {
