--- a/src/component/chat/ChatOffline.scss
+++ b/src/component/chat/ChatOffline.scss
@@ -5,7 +5,7 @@
   height: 100% !important;
 
   .greeting {
-    font-size: #{14/$font-size}rem !important;
+    font-size: #{16/$font-size}rem !important;
   }
 }
 
@@ -28,7 +28,7 @@
 
 .greeting {
   margin-top: #{6/$font-size}rem;
-  font-size: #{13/$font-size}rem;
+  font-size: $font-size-lrg;
 }
 
 .button {
