--- a/src/component/helpCenter/HelpCenterResults.scss
+++ b/src/component/helpCenter/HelpCenterResults.scss
@@ -2,7 +2,7 @@
 
 .list {
   padding: #{8/$font-size}rem 0 0 #{16/$font-size}rem;
-  font-size: #{17/$font-size}rem;
+  font-size: #{19/$font-size}rem;
 
   [dir="rtl"] & {
     padding-right: #{24/$font-size}rem;
@@ -13,7 +13,7 @@
 .item {
   color: $zd-color-aluminum;
   list-style: decimal;
-  font-size: #{13/$font-size}rem;
+  font-size: $font-size-lrg;
   margin-bottom: #{7/$font-size}rem;
   padding-left: #{2/$font-size}rem;
 
