--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -9,6 +9,8 @@ $font-size: 14;
 $font-size-lrg: #{15/$font-size}rem;
 $font-size-mobile: #{15/$font-size}rem;
 
+$font-size-lrg: #{15/$font-size}rem;
+
 $thin-border-size: #{1.1/$font-size}rem; /* 1 */
 
 @import '../../node_modules/@zendeskgarden/css-variables/dist/index';
