--- a/src/component/channelChoice/ChannelChoiceMenu.scss
+++ b/src/component/channelChoice/ChannelChoiceMenu.scss
@@ -147,6 +147,8 @@
 .newIcon {
   composes: u-userColor from global;
 
+  box-sizing: content-box;
+
   svg {
     path, rect {
       fill: currentColor !important;
