--- a/src/component/chat/chatting/ChattingFooter.scss
+++ b/src/component/chat/chatting/ChattingFooter.scss
@@ -14,6 +14,7 @@
   border-radius: #{4/$font-size}rem;
 
   svg {
+    box-sizing: content-box;
     padding: #{5/$font-size}rem;
     min-width: #{14/$font-size}rem;
     min-height: #{14/$font-size}rem;
