--- a/src/styles/utils.scss
+++ b/src/styles/utils.scss
@@ -452,6 +452,26 @@ u-overflowAuto {
   }
 }
 
+.u-textSizeSml {
+  font-size: #{13/$font-size}rem !important;
+}
+
+.u-textSizeNml {
+  font-size: #{14/$font-size}rem !important;
+}
+
+.u-textSizeMed {
+  font-size: #{15/$font-size}rem !important;
+}
+
+.u-textSize15 {
+  font-size: #{16/$font-size}rem !important;
+}
+
+.u-textSizeLrg {
+  font-size: #{17/$font-size}rem;
+}
+
 .u-textBold {
   font-weight: 700;
 }
