--- a/src/component/talk/Talk.scss
+++ b/src/component/talk/Talk.scss
@@ -55,7 +55,8 @@
 }
 
 .phoneOnlyContainer {
-  composes: u-textCenter u-textSizeNml u-userFillColor from global;
+  composes: u-textCenter u-userFillColor from global;
+  font-size: #{14/$font-size}rem !important;
   margin-top: #{50/$font-size}rem !important;
   margin-bottom: #{40/$font-size}rem;
 }
