--- a/src/component/talk/TalkPhoneField.scss
+++ b/src/component/talk/TalkPhoneField.scss
@@ -169,7 +169,7 @@ $menu-height: #{200/$font-size}rem;
 }
 
 .labelLandscape {
-  composes: u-textSizeSml from global;
+  font-size: #{13/$font-size}rem
 }
 
 .selectedFlag {
