Remove u-fontSizeMed and use $font-size-lrg or $font-size-mobile instead

--- a/src/component/attachment/AttachmentBox.scss
+++ b/src/component/attachment/AttachmentBox.scss
@@ -17,7 +17,9 @@
 }
 
 .dropzoneChild {
-  composes: u-textCenter u-posRelative u-posCenter--vert u-textSizeMed from global;
+  composes: u-textCenter u-posRelative u-posCenter--vert from global;
+
+  font-size: $font-size-lrg;
 }
 
 .dropzoneChildLabel {
