--- a/src/component/chat/ChatOffline.scss
+++ b/src/component/chat/ChatOffline.scss
@@ -1,7 +1,7 @@
 @import '../../styles/_vars.scss';
 
 .mobileContainer {
-  composes: u-textSizeMed from global;
+  font-size: $font-size-mobile;
   height: 100% !important;
 
   .greeting {
