--- a/src/component/channelChoice/ChannelChoicePopupMobile.scss
+++ b/src/component/channelChoice/ChannelChoicePopupMobile.scss
@@ -18,7 +18,7 @@
 }
 
 .innerItemLabel {
-  composes: u-textSizeMed from global !important;
+  font-size: $font-size-lrg;
 }
 
 .buttonContainer {
@@ -26,5 +26,5 @@
 }
 
 .cancelButton {
-  composes: u-textSizeMed from global;
+  font-size: $font-size-lrg;
 }
