--- a/src/component/chat/ChatMenu.scss
+++ b/src/component/chat/ChatMenu.scss
@@ -66,7 +66,8 @@
 }
 
 .itemMobile {
-  composes: u-hsizeAll u-textLeft u-borderBottom u-textSizeMed from global;
+  composes: u-hsizeAll u-textLeft u-borderBottom from global;
+  font-size: $font-size-mobile;
   background: none;
   outline: none;
   color: $zd-color-monsoon;
