--- a/src/component/chat/agents/AgentScreen.scss
+++ b/src/component/chat/agents/AgentScreen.scss
@@ -17,8 +17,8 @@
 }
 
 .mobileContainer {
-  composes: u-textSizeMed from global;
   height: 100% !important;
+  font-size: $font-size-mobile;
 }
 
 .agentListBackButton {
