--- a/src/component/container/ScrollContainer.scss
+++ b/src/component/container/ScrollContainer.scss
@@ -47,8 +47,9 @@
 }
 
 .title {
-  composes: u-textSizeMed u-textBold u-textCenter u-textXHeight from global;
+  composes: u-textBold u-textCenter u-textXHeight from global;
   letter-spacing: #{0.3/$font-size}rem;
+  font-size: $font-size-lrg;
 }
 
 .titleMobile {
