Remove u-textSize15 and replace with $font-size-mobile

--- a/src/component/shared/SuccessNotification/SuccessNotification.scss
+++ b/src/component/shared/SuccessNotification/SuccessNotification.scss
@@ -8,7 +8,8 @@
 }
 
 .contentMobile {
-  composes: u-textHeightLrg u-textSize15 from global;
+  composes: u-textHeightLrg from global;
+  font-size: $font-size-mobile;
 }
 
 .firstMessage {
