--- a/src/component/field/Dropdown.scss
+++ b/src/component/field/Dropdown.scss
@@ -73,7 +73,7 @@ $menu-height: #{200/$font-size}rem;
 }
 
 .labelMobile {
-  composes: u-textSize15 from global;
+  font-size: $font-size-mobile;
 }
 
 .labelLandscape {
@@ -122,7 +122,7 @@ $menu-height: #{200/$font-size}rem;
 }
 
 .menuContainerMobile {
-  composes: u-textSize15 from global;
+  font-size: $font-size-mobile;
   top: #{43/$font-size}rem;
 }
 
