Render HC child content based on contextual screen

--- a/src/component/helpCenter/HelpCenterDesktop.scss
+++ b/src/component/helpCenter/HelpCenterDesktop.scss
@@ -29,3 +29,7 @@
   margin-top: #{15/$font-size}rem;
   margin-bottom: #{15/$font-size}rem;
 }
+
+.loadingBars {
+  margin-top: #{5/$font-size}rem;
+}
