Render noResults content based on search type

--- a/src/component/helpCenter/HelpCenterResults.scss
+++ b/src/component/helpCenter/HelpCenterResults.scss
@@ -40,7 +40,8 @@
 }
 
 .noResults {
-  composes: u-marginTM u-textCenter u-textSizeMed from global;
+  composes: u-textCenter u-textSizeMed from global;
+  margin: 50% 0;
 }
 
 .noResultsDesktop {
@@ -69,4 +70,29 @@
 
 .legendMobile {
   composes: u-textSizeBaseMobile from global;
+}
+
+.contextualNoResults {
+  color: $zd-color-monsoon;
+  align-items: center;
+  display: flex;
+  height: 100%;
+  max-height: #{365/$font-size}rem;
+  text-align: center;
+  margin-left: #{25/$font-size}rem;
+  margin-right: #{25/$font-size}rem;
+}
+
+.contextualNoResultsMobile {
+  font-size: #{16/$font-size}rem;
+}
+
+.useSearchBarTextDesktop {
+  line-height: #{18/$font-size}rem;
+  margin-bottom: #{40/$font-size}rem;
+}
+
+.useSearchBarTextMobile {
+  line-height: #{22/$font-size}rem;
+  margin-bottom: #{40/$font-size}rem;
 }
