--- a/src/component/chat/chatting/ChatBox.scss
+++ b/src/component/chat/chatting/ChatBox.scss
@@ -4,10 +4,6 @@
   composes: u-alignBottom from global;
   margin: 0 #{1/$font-size}rem;
 
-  .label {
-    display: none;
-  }
-
   .fieldMobile {
     padding: #{12/$font-size}rem 0;
     border: none !important;
@@ -16,13 +12,6 @@
   }
 
   .input {
-    height: #{50/$font-size}rem !important;
-    color: $zd-color-oil !important;
-
-    &::placeholder {
-      color: $zd-color-gainsboro;
-    }
-
     &::-webkit-scrollbar {
       width: #{4/$font-size}rem;
     }
@@ -38,4 +27,8 @@
     height: #{16/$font-size}rem !important;
     line-height: #{16/$font-size}rem !important;
   }
+}
+
+.label {
+  composes: u-isHiddenVisually from global;
 }
