Use garden textfields in Feedback Form

--- a/src/component/chat/rating/FeedbackForm.scss
+++ b/src/component/chat/rating/FeedbackForm.scss
@@ -26,26 +26,7 @@
 }
 
 .textarea {
-  composes: u-marginBM u-hsizeAll u-paddingTS u-paddingHS from global;
-  composes: Form-field from '../../../styles/components/Form.scss';
-  border-radius: #{4/$font-size}rem;
-  resize: none;
-  outline: none;
-  border-color: $zd-color-gainsboro;
-  color: $zd-color-oil !important;
-
-  &:focus {
-    border: $thin-border-size solid $stroke-focused-color;
-    box-shadow: 0 0 0 #{3/$font-size}rem rgba(153,153,153, 0.4);
-  }
-
-  &::placeholder {
-    font-style: italic;
-  }
-}
-
-.feedbackDescription {
-  composes: u-marginBS u-block from global;
+  margin-bottom: #{15/$font-size}rem;
 }
 
 .ratingGroup {
