Use a variable for margin bottom under fields

--- a/src/component/field/EmailField.scss
+++ b/src/component/field/EmailField.scss
@@ -1,5 +1,5 @@
 @import '../../styles/_vars.scss';
 
 .container {
-  margin-bottom: #{20/$font-size}rem;
+  margin-bottom: $field-margin-bottom;
 }
