Update ZendeskLogo and scrollbar colours

--- a/src/component/chat/chatting/ChatBox.scss
+++ b/src/component/chat/chatting/ChatBox.scss
@@ -17,7 +17,7 @@
     }
 
     &::-webkit-scrollbar-thumb {
-      background: $base-border-color;
+      background: $zd-color-grey-300;
       border-radius: #{4/$font-size}rem;
     }
   }
