--- a/src/component/field/Dropdown.scss
+++ b/src/component/field/Dropdown.scss
@@ -107,7 +107,7 @@ $menu-height: #{200/$font-size}rem;
     width: #{3/$font-size}rem;
   }
   &::-webkit-scrollbar-thumb {
-    background: $base-border-color;
+    background: $zd-color-grey-300;
     border-radius: #{3/$font-size}rem;
   }
 
