--- a/src/component/helpCenter/HelpCenterArticle.scss
+++ b/src/component/helpCenter/HelpCenterArticle.scss
@@ -132,7 +132,7 @@
     }
 
     &::-webkit-scrollbar-thumb {
-      background-color: $base-border-color;
+      background: $zd-color-grey-300;
       border-radius: #{6/$font-size}rem;
     }
   }
