--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -35,7 +35,7 @@ $neutral-link-color: #007FAB;
 $field-margin-bottom: #{20/$font-size}rem;
 
 // Errors
-$error-color: $zd-color-flamingo;
+$error-color: $zd-color-red-500;
 $error-text-color: $zd-color-monsoon;
 $error-background-color: rgba($error-color, 0.1);
 
