Add new greys for Submit ticket

--- a/src/component/submitTicket/SubmitTicket.scss
+++ b/src/component/submitTicket/SubmitTicket.scss
@@ -31,7 +31,7 @@
   composes: u-borderBottom u-textBold u-paddingHN from global;
   padding-top: #{16/$font-size}rem;
   padding-bottom: #{16/$font-size}rem;
-  color: $zd-color-dark-gray;
+  color: $zd-color-grey-800;
 }
 
 .ticketFormsContainer {
