--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -24,7 +24,7 @@ $stroke-color: #DADADA;
 $stroke-focused-color: $zd-color-aluminum;
 $base-color: $zd-color-white;
 $base-shadow: $zd-color-black;
-$base-border-color: $zd-color-gainsboro;
+$base-border-color: $zd-color-grey-200;
 
 // Text colors
 $body-color: $zd-color-oil;
