Fix icon position when agents are offline in channel choice

--- a/src/component/channelChoice/ChannelChoiceMenu.scss
+++ b/src/component/channelChoice/ChannelChoiceMenu.scss
@@ -51,7 +51,6 @@
   &:hover, &:focus, &:active {
     svg path {
       fill: none !important;
-      stroke: $zd-color-dark-gray;
     }
   }
 }
@@ -157,6 +156,8 @@
 }
 
 .newIconDisabled {
+  box-sizing: content-box;
+
   svg {
     path, rect {
       fill: $zd-color-grey-400 !important;
