Change greys in Talk Forms

--- a/src/component/talk/TalkPhoneField.scss
+++ b/src/component/talk/TalkPhoneField.scss
@@ -162,6 +162,7 @@ $menu-height: #{200/$font-size}rem;
 .label {
   composes: u-textXHeight from global;
   composes: Form-fieldLabel from '../../styles/components/Form.scss';
+  color: $zd-color-grey-800;
 }
 
 .labelPortrait {
