--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -27,7 +27,7 @@ $base-shadow: $zd-color-black;
 $base-border-color: $zd-color-grey-200;
 
 // Text colors
-$body-color: $zd-color-oil;
+$body-color: $zd-color-grey-800;
 $secondary-color: $zd-color-aluminum;
 $neutral-link-color: #007FAB;
 
