--- a/src/component/chat/agents/AgentList.scss
+++ b/src/component/chat/agents/AgentList.scss
@@ -8,7 +8,7 @@
 }
 
 .textContainer {
-  color: $zd-color-dark-gray;
+  color: $zd-color-grey-800;
   line-height: #{16/$font-size}rem;
   padding-left: #{15/$font-size}rem;
   overflow: hidden;
@@ -32,5 +32,5 @@
 
 .title {
   composes: singleLineText;
-  color: $zd-color-aluminum
+  color: $zd-color-grey-500
 }
