Update chat log and main chat screen greys

--- a/src/component/Icon.scss
+++ b/src/component/Icon.scss
@@ -43,7 +43,7 @@
   z-index: 9999;
   visibility: hidden;
   border-radius: #{4/$font-size}rem;
-  background-color: $zd-color-dark-gray;
+  background-color: $zd-color-grey-800;
   padding-top: #{2/$font-size}rem;
   padding-bottom: #{2/$font-size}rem;
   transition: opacity 150ms ease-out;
