--- a/src/component/chat/chatting/ChattingScreen.scss
+++ b/src/component/chat/chatting/ChattingScreen.scss
@@ -11,7 +11,7 @@
 .agentTyping {
   margin-top: #{8/$font-size}rem;
   margin-bottom: #{9/$font-size}rem;
-  color: $zd-color-aluminum;
+  color: $zd-color-grey-500;
   width: 100%;
   background: linear-gradient(to bottom, rgba($zd-color-white, 0), rgba($zd-color-white, 0.8));
 }
