--- a/src/component/chat/chatting/HistoryLog.scss
+++ b/src/component/chat/chatting/HistoryLog.scss
@@ -6,7 +6,7 @@
   padding-top: #{10/$font-size}rem;
   overflow: hidden;
   text-align: center;
-  color: $zd-color-aluminum;
+  color: $zd-color-grey-500;
 
   &:before,
   &:after {
