--- a/src/component/chat/ChatContactDetailsPopup.scss
+++ b/src/component/chat/ChatContactDetailsPopup.scss
@@ -40,7 +40,7 @@
 }
 
 .title {
-  color: $zd-color-dark-gray;
+  color: $zd-color-grey-800;
   margin-bottom: #{16/$font-size}rem;
   text-align: center;
   font-size: $font-size-lrg;
