Update remaining chat form greys

--- a/src/component/chat/prechat/PrechatForm.scss
+++ b/src/component/chat/prechat/PrechatForm.scss
@@ -17,7 +17,7 @@
 }
 
 .greetingMessage {
-  color: $zd-color-dark-gray;
+  color: $zd-color-grey-800;
   margin-bottom: #{13/$font-size}rem;
   white-space: pre-line;
 }
