Change greys for chat popups and chat option messages

--- a/src/component/chat/ChatNotificationPopup.scss
+++ b/src/component/chat/ChatNotificationPopup.scss
@@ -10,6 +10,7 @@
 
 .proactiveContainer {
   composes: u-flex u-flexAlignItemsCenter from global;
+  color: $zd-color-grey-800;
 }
 
 .proactiveNotificationMobile {
