--- a/src/component/submitTicket/SubmitTicket.scss
+++ b/src/component/submitTicket/SubmitTicket.scss
@@ -32,6 +32,7 @@
   padding-top: #{16/$font-size}rem;
   padding-bottom: #{16/$font-size}rem;
   color: $zd-color-grey-800;
+  font-size: #{12/$font-size}rem;
 }
 
 .ticketFormsContainer {
